--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-</head>
+<script defer src="bundle.js"></script></head>
 <body>
     <header class="header container">
         <nav class="nav">
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="col-6">
-                <img class="banner-img" src="./assets/images/img-1.png" />
+                <img class="banner-img" src="37e1cc82b5025c856b97.png" />
             </div>
         </div>
     </section>
@@ -77,7 +77,7 @@
     <section class="image-text container">
         <div class="row image-text-row">
             <div class="col-6">
-                <img class="image-text-img" src="./assets/images/img-2.png" />
+                <img class="image-text-img" src="bd47ab8ec2ed0ce1a68d.png" />
             </div>
             <div class="col-6">
                 <div class="image-text-box">
@@ -105,7 +105,7 @@
         <div class="row blogs-row">
             <div class="col-3">
                 <div class="blogs-content">
-                    <img class="blogs-img-avt" src="./assets/images/blogs/blog-1.png" />
+                    <img class="blogs-img-avt" src="9ef758200282e2377378.png" />
                     <div class="blogs-info">
                         <h5>Julian Jameson</h5>
                         <span>Profession</span>
@@ -141,7 +141,7 @@
             </div>
             <div class="col-3">
                 <div class="blogs-content">
-                    <img class="blogs-img-avt" src="./assets/images/blogs/blog-2.png" />
+                    <img class="blogs-img-avt" src="b13fdc491a3760b35619.png" />
                     <div class="blogs-info">
                         <h5>Julian Jameson</h5>
                         <span>Profession</span>
@@ -176,7 +176,7 @@
             </div>
             <div class="col-3">
                 <div class="blogs-content">
-                    <img class="blogs-img-avt" src="./assets/images/blogs/blog-3.png" />
+                    <img class="blogs-img-avt" src="e106ce3e15c5f9af43b5.png" />
                     <div class="blogs-info">
                         <h5>Julian Jameson</h5>
                         <span>Profession</span>
@@ -211,7 +211,7 @@
             </div>
             <div class="col-3">
                 <div class="blogs-content">
-                    <img class="blogs-img-avt" src="./assets/images/blogs/blog-4.png" />
+                    <img class="blogs-img-avt" src="41cbe16593dbad586ff4.png" />
                     <div class="blogs-info">
                         <h5>Julian Jameson</h5>
                         <span>Profession</span>
@@ -340,6 +340,6 @@
             </div>
         </div>
     </footer>
-    <script src="javascript.js"></script>
+    <script src="4ac796e8130c7ece5551.js"></script>
 </body>
 </html>
